alt attribute added to <src> tags

--- a/index.html
+++ b/index.html
@@ -16,38 +16,38 @@
 	<h1>Stream One</h1>	
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/GitHub">
-		<img src="https://s3-us-west-2.amazonaws.com/cosmicjs/e7ce1f70-27c7-11e7-9631-b17e7278f329-github.svg" />
+		<img src="https://s3-us-west-2.amazonaws.com/cosmicjs/e7ce1f70-27c7-11e7-9631-b17e7278f329-github.svg" alt="Github image"/>
 		<h2>GitHub</h2>
 		</a>
 	</div>
 	
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/HTML5">
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" />
+		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1200px-HTML5_logo_and_wordmark.svg.png" alt="HTML5 image"/>
 		<h2>HTML5</h2>
 		</a>
 	</div>
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets">
-		<img src="https://fthmb.tqn.com/WZNesKyPX1bZd2vvu1uOvb5CDPg=/768x0/filters:no_upscale()/css3-57b597e85f9b58b5c2b338de.png" />
+		<img src="https://fthmb.tqn.com/WZNesKyPX1bZd2vvu1uOvb5CDPg=/768x0/filters:no_upscale()/css3-57b597e85f9b58b5c2b338de.png" alt="CSS3 image"/>
 		<h2>CSS3</h2>
 		</a>
 	</div>
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/JavaScript">
-		<img src="https://www.javatpoint.com/images/javascript/javascript_logo.png" />
+		<img src="https://www.javatpoint.com/images/javascript/javascript_logo.png" alt="JavaScript image"/>
 		<h2>JavaScript</h2>
 		</a>
 	</div>
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/Cloud9">
-		<img src="https://cdn.shopify.com/s/files/1/0501/5685/products/Cloud9_Classic_Mousepad.png?v=1431124031" />
+		<img src="https://cdn.shopify.com/s/files/1/0501/5685/products/Cloud9_Classic_Mousepad.png?v=1431124031" alt="Cloud9 image"/>
 		<h2>Cloud9</h2>
 		</a>
 	</div>
 		<div class="card">
 		<a href="https://en.wikipedia.org/wiki/Git">
-		<img src="https://avatars1.githubusercontent.com/u/18133?s=400&v=4" />
+		<img src="https://avatars1.githubusercontent.com/u/18133?s=400&v=4" alt="Git image"/>
 		<h2>Git</h2>
 		</a>
 	</div>
