--- a/stream-three.html
+++ b/stream-three.html
@@ -17,37 +17,37 @@
 	
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
-		<img src="https://pluralsight.imgix.net/paths/python-7be70baaac.png" />
+		<img src="https://pluralsight.imgix.net/paths/python-7be70baaac.png" alt="Python image"/>
 		<h2>Python</h2>
 		</a>
 	</div>
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/Django_(web_framework)">
-		<img src="http://www.unixstickers.com/image/cache/data/stickers/django/django-neg.sh-600x600.png" />
+		<img src="http://www.unixstickers.com/image/cache/data/stickers/django/django-neg.sh-600x600.png" alt="Django image"/>
 		<h2>Django</h2>
 		</a>
 	</div>
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/Heroku">
-		<img src="https://pbs.twimg.com/profile_images/700084762799550464/dbPz0Wiw_400x400.png" />
+		<img src="https://pbs.twimg.com/profile_images/700084762799550464/dbPz0Wiw_400x400.png" alt="Heroku image"/>
 		<h2>Heroku</h2>
 		</a>
 	</div>
 		<div class="card">
 		<a href="https://en.wikipedia.org/wiki/Git">
-		<img src="https://avatars1.githubusercontent.com/u/18133?s=400&v=4" />
+		<img src="https://avatars1.githubusercontent.com/u/18133?s=400&v=4" alt="Git image"/>
 		<h2>Git</h2>
 		</a>
 	</div>
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/GitHub">
-		<img src="https://s3-us-west-2.amazonaws.com/cosmicjs/e7ce1f70-27c7-11e7-9631-b17e7278f329-github.svg" />
+		<img src="https://s3-us-west-2.amazonaws.com/cosmicjs/e7ce1f70-27c7-11e7-9631-b17e7278f329-github.svg" alt="Github image"/>
 		<h2>GitHub</h2>
 		</a>
 	</div>
 	<div class="card">
 		<a href="https://en.wikipedia.org/wiki/MySQL">
-		<img src="https://cloud.oracle.com/opc/paas/images/OracleMySQLCloudService.png" />
+		<img src="https://cloud.oracle.com/opc/paas/images/OracleMySQLCloudService.png" alt="MySQL image"/>
 		<h2>MySQL</h2>
 		</a>
 	</div>
